--- a/src/main.css
+++ b/src/main.css
@@ -184,17 +184,33 @@
 .not-found-wrapper .not-found__logo span {
   font: normal 400 normal 128px / 70.4px Abril Fatface;
 }
-.not-found-wrapper .not-found__text1 {
+.not-found-wrapper .not-found__text1,
+.not-found-wrapper .not-found__text2 {
   text-align: center;
   font: normal 400 normal 32px / 44.8px Quattrocento Sans;
 }
-.not-found-wrapper .not-found__text2 {
-  font: normal 400 normal 24px / 33.6px Quattrocento Sans;
-}
 @media screen and (max-width: 834px) {
+  .not-found-wrapper .not-found__text1,
   .not-found-wrapper .not-found__text2 {
     width: 80%;
     text-align: center;
+  }
+}
+@media screen and (max-width: 420px) {
+  .not-found-wrapper .not-found__logo {
+    width: 180px;
+    height: 80px;
+  }
+  .not-found-wrapper .not-found__logo span {
+    font-size: 64px;
+  }
+  .not-found-wrapper .not-found__logo img {
+    width: 80px;
+    left: 55px;
+  }
+  .not-found-wrapper .not-found__text1,
+  .not-found-wrapper .not-found__text2 {
+    font-size: 24px;
   }
 }
 .productList {
@@ -317,6 +333,7 @@ footer .footer-copy p {
 }
 @media screen and (max-width: 420px) {
   footer .footer {
+    padding: 8px;
     grid-template-areas: 'logo logo' 'contact social';
     grid-template-columns: 1fr 1fr;
     grid-auto-rows: 1fr 1fr 0.5fr;
